# ApkInstaller-for-quest3

./: AdbThread.cpp  AdbThread.h  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  version.rc.in
